feat: show a ContextMenuPointer in table mode

--- a/src/lib/components/modes/tablemode/TableMode.scss
+++ b/src/lib/components/modes/tablemode/TableMode.scss
@@ -118,6 +118,11 @@
             vertical-align: top;
             display: inline-block;
           }
+
+          .jse-context-menu-anchor {
+            position: relative;
+            vertical-align: top;
+          }
         }
       }
     }
