--- a/src/lib/components/modals/TransformModal.scss
+++ b/src/lib/components/modals/TransformModal.scss
@@ -2,7 +2,7 @@
 @import 'Modal';
 
 .jse-modal.jse-transform {
-  .jse-contents {
+  .jse-modal-contents {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -140,22 +140,7 @@
 
   input,
   textarea {
-    border: var(--jse-input-border);
-    outline: none;
-    box-sizing: border-box;
-    padding: $padding-half;
-    font-family: var(--jse-font-family-mono);
-    font-size: var(--jse-font-size-mono);
-    color: inherit;
-    background: var(--jse-input-background);
-
-    &:focus {
-      border: var(--jse-input-border-focus);
-    }
-
-    &:read-only {
-      background: var(--jse-input-background-readonly);
-    }
+    @include modal-input-mixin;
   }
 
   .jse-preview.jse-error {
