--- a/src/lib/components/modes/treemode/JSONNode.scss
+++ b/src/lib/components/modes/treemode/JSONNode.scss
@@ -10,10 +10,10 @@
     padding-bottom: $contents-padding;
     box-sizing: border-box;
 
-    > .jse-header-outer :global(.jse-context-menu-button),
-    > .jse-contents-outer > .jse-contents :global(.jse-context-menu-button) {
+    > .jse-header-outer :global(.jse-context-menu-pointer),
+    > .jse-contents-outer > .jse-contents :global(.jse-context-menu-pointer) {
       top: 0;
-      right: calc(-2px - var(--jse-context-menu-button-size));
+      right: calc(-2px - var(--jse-context-menu-pointer-size));
     }
 
     > .jse-contents-outer > .jse-contents {
@@ -63,6 +63,7 @@
   .jse-contents {
     display: flex;
     flex-direction: row;
+    align-items: start; // important for the alignment of the context menu button and key in case of a multi line value
   }
 
   .jse-contents {
@@ -97,7 +98,7 @@
     z-index: 1;
   }
 
-  .jse-context-menu-button-anchor {
+  .jse-context-menu-pointer-anchor {
     position: relative;
   }
 
@@ -114,7 +115,7 @@
     margin-right: $padding-half;
     outline: $height-half solid; // color depends on hovered/selected/inactive+selected
 
-    :global(.jse-context-menu-button) {
+    :global(.jse-context-menu-pointer) {
       right: -$height-half;
       background: var(--jse-selection-background-color);
     }
@@ -126,8 +127,8 @@
 
   @include json-node-selected-mixin(
     var(--jse-selection-background-color),
-    var(--jse-context-menu-button-background),
-    var(--jse-context-menu-button-background-highlight)
+    var(--jse-context-menu-pointer-background),
+    var(--jse-context-menu-pointer-background-highlight)
   );
 }
 
@@ -186,7 +187,7 @@
   background: var(--jse-tag-background);
   border-radius: 2px;
   cursor: pointer;
-  position: relative;
+  //position: relative;
   display: inline-block;
   padding: 0 4px;
   line-height: normal;
