fix: unnecessary z-index on the context menu pointer

--- a/src/lib/components/modes/treemode/JSONNode.scss
+++ b/src/lib/components/modes/treemode/JSONNode.scss
@@ -118,6 +118,7 @@
     :global(.jse-context-menu-pointer) {
       right: -$height-half;
       background: var(--jse-selection-background-color);
+      z-index: 1; // prevent the next line half-overlapping the pointer
     }
 
     &.jse-hovered {
