--- a/src/lib/components/modals/SortModal.scss
+++ b/src/lib/components/modals/SortModal.scss
@@ -34,7 +34,7 @@
         }
       }
 
-      :global(.selectContainer input) {
+      :global(.svelte-select input) {
         box-sizing: border-box;
       }
     }
