--- a/src/lib/components/modes/treemode/JSONNode.scss
+++ b/src/lib/components/modes/treemode/JSONNode.scss
@@ -21,17 +21,6 @@
     }
   }
 
-  &.jse-hovered {
-    > .jse-header-outer > .jse-header > .jse-meta,
-    .jse-props .jse-header,
-    .jse-items .jse-header,
-    .jse-props .jse-contents,
-    .jse-items .jse-contents,
-    .jse-footer {
-      background: var(--jse-hover-background-color);
-    }
-  }
-
   $selector-height: 8px; // must be about half a line height
 
   .jse-props,
@@ -75,6 +64,12 @@
     padding-left: calc(var(--jse-indent-size) + $input-padding);
   }
 
+  .jse-header,
+  .jse-contents,
+  .jse-footer {
+    background: var(--jse-contents-background-color);
+  }
+
   .jse-insert-selection-area {
     visibility: hidden;
     padding: 0 $padding-half;
@@ -91,12 +86,6 @@
     }
   }
 
-  &:hover > .jse-contents-outer .jse-insert-selection-area:not(.jse-selected),
-  .jse-header-outer:hover > .jse-insert-selection-area:not(.jse-selected),
-  .jse-footer-outer:hover .jse-insert-selection-area:not(.jse-selected) {
-    visibility: visible;
-  }
-
   .jse-context-menu-pointer-anchor {
     position: relative;
   }
@@ -107,6 +96,7 @@
 
     display: flex;
     position: relative;
+    z-index: 1; // prevent the next line half-overlapping the pointer
 
     max-width: 250px;
     min-width: 100px;
@@ -116,12 +106,11 @@
 
     :global(.jse-context-menu-pointer) {
       right: -$height-half;
-      background: var(--jse-selection-background-color);
-      z-index: 1; // prevent the next line half-overlapping the pointer
+      background: var(--jse-context-menu-pointer-hover-background);
     }
 
     &.jse-hovered {
-      outline-color: var(--jse-selection-background-color);
+      outline-color: var(--jse-context-menu-pointer-hover-background);
     }
   }
 
@@ -130,6 +119,23 @@
     var(--jse-context-menu-pointer-background),
     var(--jse-context-menu-pointer-background-highlight)
   );
+
+  &:hover > .jse-contents-outer .jse-insert-selection-area:not(.jse-selected),
+  .jse-header-outer:hover > .jse-insert-selection-area:not(.jse-selected),
+  .jse-footer-outer:hover .jse-insert-selection-area:not(.jse-selected) {
+    visibility: visible;
+  }
+
+  &.jse-hovered {
+    > .jse-header-outer > .jse-header > .jse-meta,
+    .jse-props .jse-header,
+    .jse-items .jse-header,
+    .jse-props .jse-contents,
+    .jse-items .jse-contents,
+    .jse-footer {
+      background: var(--jse-hover-background-color);
+    }
+  }
 }
 
 // lighter selection color when the editor doesn't have focus
