chore: move styling of the `json-node-selected-mixin` inline

--- a/src/lib/components/controls/EditableDiv.scss
+++ b/src/lib/components/controls/EditableDiv.scss
@@ -9,6 +9,7 @@ div.jse-editable-div {
   outline: none;
   border-radius: 1px;
   vertical-align: top;
+  cursor: text !important; // TODO: get rid of the !important
 
   word-break: normal;
   white-space: pre-wrap; // important for rendering multiple consecutive spaces
