--- a/src/lib/plugins/value/components/ReadonlyValue.scss
+++ b/src/lib/plugins/value/components/ReadonlyValue.scss
@@ -9,6 +9,7 @@
   outline: none;
   border-radius: 1px;
   vertical-align: top;
+  cursor: var(--jse-contents-cursor);
 
   word-break: normal;
   overflow-wrap: anywhere;
