--- a/src/lib/themes/jse-theme-default.css
+++ b/src/lib/themes/jse-theme-default.css
@@ -61,7 +61,7 @@
   --jse-context-menu-color: var(--jse-text-color-inverse);
   --jse-context-menu-color-disabled: #9d9d9d;
   --jse-context-menu-separator-color: #7a7a7a;
-  --jse-context-menu-pointer-hover-background: var(--jse-selection-background-color);
+  --jse-context-menu-pointer-hover-background: #b2b2b2;
   --jse-context-menu-pointer-background: var(--jse-context-menu-background);
   --jse-context-menu-pointer-background-highlight: var(--jse-context-menu-background-highlight);
   --jse-context-menu-pointer-color: var(--jse-context-menu-color);
