--- a/src/lib/components/modals/Modal.scss
+++ b/src/lib/components/modals/Modal.scss
@@ -10,17 +10,7 @@
   --multi-item-border-radius: 6px;
   --indicator-top: 8px;
 
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  min-width: 0;
-  min-height: 0;
-
-  font-family: var(--jse-font-family);
-  font-size: var(--jse-font-size);
-  line-height: normal;
-  background: var(--jse-modal-background);
-  color: var(--jse-text-color);
+  @include jse-modal-style;
 
   .jse-modal-contents {
     flex: 1;
