fix: bottom margin of welcome screen in tree and table mode

--- a/src/lib/components/modes/tablemode/TableModeWelcome.scss
+++ b/src/lib/components/modes/tablemode/TableModeWelcome.scss
@@ -23,7 +23,7 @@
     flex-direction: column;
     gap: $padding;
     max-width: 300px;
-    margin: $padding;
+    margin: 2em $padding;
 
     font-family: var(--jse-font-family);
     font-size: var(--jse-font-size);
