--- a/src/lib/components/modes/treemode/Welcome.scss
+++ b/src/lib/components/modes/treemode/Welcome.scss
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: column;
     max-width: 300px;
-    margin: 2em $padding 0;
+    margin: 2em $padding;
     gap: $padding;
 
     .jse-welcome-title {
